--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0"
   }
 }
