--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node ./test/test.js"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
@@ -18,5 +19,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "newman": "^3.4.3"
   }
 }
